<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_registration">registration</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email address</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="retypepassword">Retype password</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Francel Aquino</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Home</string>
    <string name="logout">Logout</string>
    <string name="faqs">Faqs</string>
    <string name="member">Member</string>
    <string name="group">Group</string>
    <string name="places">Places</string>
    <string name="locationhistory">Location History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>
