<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"  android:id="@+id/sorting1">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/profile"/>
        <item
                android:id="@+id/nav_member"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/member"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/group"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_beenhere_black_24dp"
                android:title="@string/places"/>

        <item
                android:id="@+id/nav_location_history"
                android:icon="@drawable/ic_person_pin_circle_black_24dp"
                android:title="@string/locationhistory"/>
    </group>
    <group android:checkableBehavior="single"  android:id="@+id/sorting">
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/settings"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/about"/>
            <item
                    android:id="@+id/nav_faqs"
                    android:icon="@drawable/ic_live_help_black_24dp"
                    android:title="@string/faqs"/>


</group>
    <group android:checkableBehavior="single"  >
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_settings_power_black_24dp"
                android:title="@string/logout"/>
    </group>
</menu>
