<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/linearLayout1"
        tools:context=".LoginActivity">


    <ImageView
            android:src="@drawable/logo"
            android:layout_width="140dp"
            android:layout_height="160dp"
            android:layout_marginBottom="100dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/email"/>
    <EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:background="@drawable/edittext"
            android:layout_height="35dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorBlack"
            android:layout_marginBottom="@dimen/edittext_margin_bottom"  />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="@string/password"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:background="@drawable/edittext"
            android:textColorHint="@color/colorBlack"
            android:textColor="@color/colorPrimary"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/edittext_margin_bottom"
            android:layout_height="35dp"/>


    <Button android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btnlogin"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/registerbutton"
            android:text="@string/login"/>
    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/alreadyhaveanaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/colorGray"
                android:text="Don't have an account?"/>

        <TextView
                android:id="@+id/btnregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginLeft="2dp"
                android:textColor="@color/colorBlue"
                android:text="Register"
        />

    </LinearLayout>

</LinearLayout>